package structural.decorator.flutter;

public class Column {
}
