package structural.decorator.flutter;

public class Row {
}
