package structural.decorator.flutter;

public interface Widget {
    String showText();
    String showButton();
}
